--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,5 @@ serde_json = "1.0.140"
 tracing = "0.1.41"
 tracing-appender = "0.2.3"
 tracing-subscriber = "0.3.19"
+actix-web = "4"
+crc16 = "0.4.0"
