--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,6 @@ serde = { version = "1.0.219", features = ["derive"] }
 serde_json = "1.0.140"
 tracing = "0.1.41"
 tracing-appender = "0.2.3"
-tracing-subscriber = "0.3.19"
+tracing-subscriber = { version="0.3.19", features=["env-filter"] }
 actix-web = "4"
 crc16 = "0.4.0"
