--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,3 +16,4 @@ tracing-appender = "0.2.3"
 tracing-subscriber = { version="0.3.19", features=["env-filter"] }
 actix-web = "4"
 crc16 = "0.4.0"
+hex = "0.4.3"
